# SPIRV-VM

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  LICENSE  OPCODES.txt  README.md  compile.sh  main.c  shader.glsl  shader.hlsl  shader.spv  shader.spvasm  spirv.h
example/: example.c  shader.glsl  shader.spvasm
inc/spvm/: analyzer.h  context.h  image.h  opcode.h  program.h  result.h  spirv.h  state.h  types.h  value.h
inc/spvm/ext/: GLSL450.h
src/: context.c  image.c  opcode.c  opcode_execute.c  opcode_setup.c  program.c  result.c  state.c  types.c  value.c
src/ext/: GLSL.std.450.h  GLSL450.c
